<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.unicorn</groupId>
	<artifactId>unicorn-framework</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>unicorn-framework</name>
	<url>http://maven.apache.org</url>

	<parent> 
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>1.5.6.RELEASE</version>
		<relativePath/> 
	</parent>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>Dalston.SR1</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>


	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<env.version>SNAPSHOT</env.version>
		<module.version>1.0.0-${env.version}</module.version>
		<java.version>1.8</java.version>
		<maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
		<spring-boot-starter-parent.version>1.8</spring-boot-starter-parent.version>
		<mybatis.version>3.4.1</mybatis.version>
		<mybatis-spring.version>1.3.1</mybatis-spring.version>
		<druid.version>1.0.11</druid.version>
		<commons-codec.version>1.9</commons-codec.version>
		<mybatis-generator-core.version>1.3.2</mybatis-generator-core.version>
		<mybatis-spring-boot-starter.version>1.1.1</mybatis-spring-boot-starter.version>
		<elastic-job-core.version>1.0.1</elastic-job-core.version>
		<elastic-job-spring.version>1.0.1</elastic-job-spring.version>
		<aliyun-sdk-oss.version>2.0.0</aliyun-sdk-oss.version>
		<commons-io.version>2.4</commons-io.version>
		<gson.version>2.8.1</gson.version>
		<dozer.version>5.5.1</dozer.version>
		<lombok.version>1.16.10</lombok.version>
		<httpclient.version>4.5</httpclient.version>
		<httpmime.version>4.5</httpmime.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context-support</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
		</dependency>


		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commons-io.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
		</dependency>

		<!-- https://mvnrepository.com/artifact/net.sf.dozer/dozer -->
		<dependency>
			<groupId>net.sf.dozer</groupId>
			<artifactId>dozer</artifactId>
			<version>${dozer.version}</version>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
		</dependency>

		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>${commons-codec.version}</version>
		</dependency>
	</dependencies>

	<!-- 设定主仓库，按设定顺序进行查找。 -->
	<repositories>
		<repository>
			<id>releases</id>
			<name>Team Nexus Repository</name>
			<url>http://220.168.26.90:8083/nexus/content/repositories/releases/</url>
		</repository>

		<repository>
			<id>snapshots</id>
			<name>Team Nexus Repository</name>
			<url>http://220.168.26.90:8083/nexus/content/repositories/snapshots/</url>
		</repository>
	</repositories>


	<!-- 设定发布位置，mvn deploy时用到，不设置时会报错 -->
	<distributionManagement>
		<repository>
			<id>releases</id>
			<name>Gigold Nexus Repository</name>
			<url>http://220.168.26.90:8083/nexus/content/repositories/releases/</url>
		</repository>
		<snapshotRepository>
			<id>snapshots</id>
			<name>Gigold Nexus Repository</name>
			<url>http://220.168.26.90:8083/nexus/content/repositories/snapshots/</url>
		</snapshotRepository>
	</distributionManagement>




	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<resources>
			<resource>
				<directory>src/main/java</directory>
				<includes>
					<include>**/*.properties</include>
					<include>**/*.xml</include>
				</includes>
				<filtering>false</filtering>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<testSourceDirectory>src/test/java</testSourceDirectory>
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
				<filtering>true</filtering>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</testResource>
		</testResources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<attach>true</attach>
				</configuration>
				<executions>
					<execution>
						<phase>compile</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.3.1</version>
				<configuration>
					<argLine>-Xmx512m -XX:PermSize=128m -XX:MaxPermSize=128m</argLine>
					<testFailureIgnore>true</testFailureIgnore>
					<includes>
						<include>**/*Test*.java</include>
					</includes>
					<excludes/>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<modules>
		<module>framework-base</module>
		<module>framework-util</module>
		<module>framework-core</module>
		<module>framwork-elastic-job</module>
		<module>framwork-oss</module>
		<module>framework-config-server</module>

		<module>framework-cache</module>
		<module>framework-orm</module>
		<module>framework-drools</module>
		<module>framework-mq</module>

  </modules>
</project>